# avengers

./: .env.example  .gitignore  ARCHITECTURE.md  MISSION_CONTROL.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
agents/: __init__.py  api_fabricator.py  black_widow.py  captain_america.py  hulk.py  infiltrado.py  iron_coder.py  nick_fury.py  thor.py  vision_ui.py
blueprints/: README.md
core/: blueprint_schema.py  brief_schema.py  checkpoints.py  database.py  exceptions.py  llm_client.py  models.py  repository.py  settings.py  state_log.py
docs/: README.md  ui_style_guide.md
docs/backlog/: prompt_01_settings.md  prompt_02_db_layer.md  prompt_03_fury_core.md  prompt_04_fury_orchestrator.md  prompt_05_fury_checkpoints.md  prompt_06_thor_scraper.md  prompt_07_thor_sources.md  prompt_08_thor_pain_extractor.md  prompt_09_cap_blueprint_schema.md  prompt_10_cap_blueprint_generator.md  prompt_11_iron_tools_base.md  prompt_12_iron_backend_gen.md  prompt_13_iron_test_gen.md  prompt_14_vision_ui_base.md  prompt_15_vision_ui_gen.md  prompt_16_api_fabricator.md  prompt_17_hulk_guardrail.md  prompt_18_hulk_hallucination.md  prompt_19_widow_refactor.md  prompt_20_widow_qa.md  prompt_21_deploy_pipeline.md  prompt_22_infiltrado_social.md  prompt_23_infiltrado_feedback.md  (+1 more)
tests/: conftest.py
tools/: code_splitter.py  deploy_tool.py  feedback_analyzer.py  feedback_collector.py  file_tools.py  hallucination_detector.py  loop_manager.py  map_tools.py  qa_runner.py  scraper.py  shell_tools.py  test_generator.py  ui_scaffold.py
(+31 files in other folders)
