[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avengers"
version = "0.1.0"
description = "Factoría de Software Autónoma — Arquitectura Multi-Agente"
readme = "ARCHITECTURE.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Web / API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Config & Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    # HTTP Client
    "httpx>=0.27.0",
    # Database — MongoDB async
    "motor>=3.4.0",
    # Database — SQL async (opcional)
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    # LLM SDKs
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    # Retry logic — AMD-02
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx",          # TestClient
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
